Fixup favoriting function a bit

--- a/app/assets/stylesheets/osem-schedule.scss
+++ b/app/assets/stylesheets/osem-schedule.scss
@@ -243,10 +243,10 @@ td.no-padding{
   margin-top: 8px;
 }
 
-#star-events{
-  margin-right: 5px;
-  vertical-align: text-top;
-}
+// #star-events{
+//   margin-right: 5px;
+//   vertical-align: text-top;
+// }
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
