--- a/app/views/schedules/_event.html.haml
+++ b/app/views/schedules/_event.html.haml
@@ -2,12 +2,6 @@
   - header_color = event.event_type&.color || '#f5f5f5'
   .trapezoid{ style: 'color: white; top: 12px; z-index: 100;' }
   .panel-heading{ style: "background-color: #{header_color}; color: #{ contrast_color(header_color) }; border-radius: 4px" }
-    - if current_user
-      = link_to('#', onClick: 'starClicked();') do
-        %span#star-events{ class: "fa fa-lg #{ event.favourite_users.exists?(current_user.id) ? 'fa-star' : 'fa-star-o' }", |
-                           "aria-hidden" => "true", |
-                           "data-url" => toggle_favorite_conference_program_proposal_path(@conference.short_title, event.id), |
-                           "data-user" => current_user.id }
     - event.speakers_ordered.each do |speaker|
       = image_tag speaker.profile_picture, class: 'img-circle pull-right',  alt: speaker.name, style: 'padding: 2px;'
 
@@ -15,18 +9,28 @@
       = canceled_replacement_event_label(event, event_schedule)
       = replacement_event_notice(event_schedule)
 
-    %span.h3{ style: 'margin-bottom: 14px' }
-      = event.title
-      %br
-      %small{ style: "color: #{contrast_color(header_color)}" }
-        = event.subtitle
+    .row
+      - if current_user
+        .col-2{style: 'display: inline-block; vertical-align: top; margin: 0 12px'}
+          = link_to('#', onClick: 'starClicked();') do
+            %i.fa.fa-2x{ style: "color: #{contrast_color(header_color)}", |
+                class: event.favourite_users.exists?(current_user.id) ? 'fa-star' : 'fa-star-o', |
+                "aria-hidden" => "true", |
+                "data-url" => toggle_favorite_conference_program_proposal_path(@conference.short_title, event.id), |
+                "data-user" => current_user.id }
+
+      %h3.col-10{ style: 'margin: 3px; display: inline-block' }
+        = event.title
+        %br
+        %small{ style: "color: #{contrast_color(header_color)}" }
+          = event.subtitle
   .trapezoid{ style: "color: #{header_color}; top: 12px;" }
 
   .panel-body
     %h4
       - if(event.speakers.any?)
         presented by #{event.speaker_names}
-    %h5
+    %span.h5
       = join_event_link(event, current_user)
     %p
       = markdown(truncate(event.abstract, length: 400))
