--- a/app/views/layouts/_mailbot_header.html.erb
+++ b/app/views/layouts/_mailbot_header.html.erb
@@ -20,9 +20,9 @@
       <div class="row">
         <div class="col-md-2">
           <% if false && @conference.present? %>
-            <%= image_tag(conference_logo_url(@conference), style: "display:block;height:70px;width:auto;", alt: @conference.title + ' logo') %>
+            <%= image_tag(conference_logo_url(@conference), style: "display:block;height:70px;width:auto;", alt: "#{@conference.title} logo") %>
           <% else %>
-            <%= image_tag(Organization.first.picture_url, style: "display:block;height:70px;width:auto;", alt: ENV['OSEM_NAME'] + ' logo') %>
+            <%= image_tag(Organization.first.picture_url, style: "display:block;height:70px;width:auto;", alt: "#{ENV['OSEM_NAME']} logo") %>
           <% end %>
         </div>
       </div>
