--- a/app/views/schedules/_schedule_tabs.html.haml
+++ b/app/views/schedules/_schedule_tabs.html.haml
@@ -5,5 +5,5 @@
       = link_to('All events', events_conference_schedule_path(@conference.short_title))
     %li{ class: "program #{ 'active' if active == 'now' }", role: "presentation" }
       = link_to('Happening Now', happening_now_conference_schedule_path(@conference.short_title))
-    %li{ class: "schedule #{ 'active' if active == 'schedule' }", role: "presentation" }
-      = link_to('Schedule', conference_schedule_path(@conference.short_title))
+    %li{ class: "schedule #{ 'active' if active == 'vertical_schedule' }", role: "presentation" }
+      = link_to('Schedule', vertical_schedule_conference_schedule_path(@conference.short_title))
