--- a/app/views/admin/events/_datatable_row.haml
+++ b/app/views/admin/events/_datatable_row.haml
@@ -1,4 +1,4 @@
-- cache ['admin', conference_id, program, event] do
+- cache ['admin', current_user, conference_id, program, event] do
   %tr{ id: "event-#{event.id}" }
     %td
       = event.id
