--- a/app/views/schedules/_schedule_tabs.html.haml
+++ b/app/views/schedules/_schedule_tabs.html.haml
@@ -1,8 +1,8 @@
 %div{ role: 'tabpanel' }
   %ul.nav.nav-tabs{ role: 'tablist' }
-    %li.program{ class: 'active' if active == 'program', role: 'presentation' }
+    %li.program{ class: ('active' if active == 'program'), role: 'presentation' }
       = link_to('All events', events_conference_schedule_path(@conference.short_title, favourites: @favourites))
-    %li.program{ class: 'active' if active == 'now', role: 'presentation' }
+    %li.program{ class: ('active' if active == 'now'), role: 'presentation' }
       = link_to('Happening Now', happening_now_conference_schedule_path(@conference.short_title))
-    %li.schedule{ class: 'active' if active == 'vertical_schedule', role: 'presentation' }
+    %li.schedule{ class: ('active' if active == 'vertical_schedule'), role: 'presentation' }
       = link_to('Schedule', vertical_schedule_conference_schedule_path(@conference.short_title, favourites: @favourites))
