--- a/app/views/schedules/_event.html.haml
+++ b/app/views/schedules/_event.html.haml
@@ -1,31 +1,34 @@
-.panel.panel-default.event-panel{ onClick: 'eventClicked(event, this);', 'data-url' => "#{url_for(conference_program_proposal_path(@conference.short_title, event.id))}" }
+.panel.panel-default.event-panel{ onClick: 'eventClicked(event, this);', 'data-url' => "#{url_for(conference_program_proposal_path(@conference.short_title, event.id))}", tabindex: 0, role: 'link'}
   - header_color = event.event_type&.color || '#f5f5f5'
   .trapezoid{ style: 'color: white; top: 12px; z-index: 100;' }
   .panel-heading{ style: "background-color: #{header_color}; color: #{ contrast_color(header_color) }; border-radius: 4px" }
-    - if !defined?(is_brief) || is_brief == false
-      - event.speakers_ordered.each do |speaker|
-        = image_tag speaker.profile_picture, class: 'img-circle pull-right',  alt: speaker.name, style: 'padding: 2px;'
-
     %p
       = canceled_replacement_event_label(event, event_schedule)
       = replacement_event_notice(event_schedule)
 
-    .row{style: 'display: flex'}
-      - if current_user
-        .col-2{style: 'flex: 1; padding: 8px'}
-          = link_to('#', onClick: 'starClicked();',
-                    'aria-label': "#{event.favourite_users.exists?(current_user.id) ? 'un' : ''}favorite event #{event.title}") do
-            %i.fa.fa-2x{ style: "color: #{contrast_color(header_color)}", |
-                class: event.favourite_users.exists?(current_user.id) ? 'fa-star' : 'fa-star-o', |
-                "aria-hidden" => "true", |
-                "data-url" => toggle_favorite_conference_program_proposal_path(@conference.short_title, event.id), |
-                "data-user" => current_user.id }
+    .container-fluid
+      .row
+        - if current_user
+          %spna.col-2{ style: 'padding: 8px;'}
+            = link_to('#', onClick: 'starClicked();',
+                      'aria-label': "#{event.favourite_users.exists?(current_user.id) ? 'un' : ''}favorite event #{event.title}") do
+              %i.fa.fa-2x{ style: "color: #{contrast_color(header_color)}", |
+                  class: event.favourite_users.exists?(current_user.id) ? 'fa-star' : 'fa-star-o', |
+                  "aria-hidden" => "true", |
+                  "data-url" => toggle_favorite_conference_program_proposal_path(@conference.short_title, event.id), |
+                  "data-user" => current_user.id }
 
-      %h3.col-10{ style: 'margin: 3px; flex 1' }
-        = event.title
-        %br
-        %small{ style: "color: #{contrast_color(header_color)}" }
-          = event.subtitle
+        %h3.col-8{ style: 'margin: 3px; display: inline' }
+          = event.title
+          %br
+          %small{ style: "color: #{contrast_color(header_color)}" }
+            = event.subtitle
+
+        %span.col-2
+          - if !defined?(is_brief) || is_brief == false
+            - event.speakers_ordered.each do |speaker|
+              = image_tag speaker.profile_picture, class: 'img-circle pull-right',  alt: speaker.name, style: 'padding: 2px;'
+
   .trapezoid{ style: "color: #{header_color}; border-top-color: #{header_color}; top: 12px;" }
 
   .panel-body
