--- a/app/views/schedules/show.html.haml
+++ b/app/views/schedules/show.html.haml
@@ -8,7 +8,7 @@
     - if current_user
       .row
         .col-md-12.text-center
-          = button_to (@favourites ? 'All events' : 'Only favourites events'),
+          = button_to (@favourites ? 'All events' : 'My Personal Schedule'),
                       conference_schedule_path(@conference.short_title),
                       params: { favourites: !@favourites },
                       method: :get, class: 'btn btn-success'
