Minor copy edit

--- a/app/views/conferences/_happening_now.haml
+++ b/app/views/conferences/_happening_now.haml
@@ -12,4 +12,4 @@
       != pagy_bootstrap_nav_js(pagy)
 - else
   .row
-    %h3.text-center There are no events scheduled yet.
+    %h3.text-center There are no upcoming events.
