--- a/app/views/admin/splashpages/show.html.haml
+++ b/app/views/admin/splashpages/show.html.haml
@@ -13,6 +13,14 @@
 - if @splashpage
   .row
     .col-md-12
+      %strong Banner Image
+      - if @splashpage.banner_photo.present?
+        = image_tag @splashpage.banner_photo.thumb.url
+      - else
+        %p None Set
+      %hr
+  .row
+    .col-md-12
       %ul.fa-ul
         %li
           %i{ class: "fa-li #{icon_for_todo @splashpage.include_cfp?}" }
