--- a/app/views/conferences/_header.haml
+++ b/app/views/conferences/_header.haml
@@ -1,20 +1,20 @@
 - cache [conference, venue, '#splash#header'] do
-  #banner{ style: ("background-image: url(#{conference.picture_url})" if conference.picture_url) }
+  #banner{ style: ("background-image: url(#{splashpage.banner_photo_url})" if splashpage.banner_photo_url) }
     .container
       - if user_signed_in?
         - if current_user.ticket_purchases.by_conference(@conference).empty?
-          .alert.bg-info{ :role => "alert", :style => "margin-bottom: 100px" }
+          .alert.bg-info{ role: "alert", style: "margin-bottom: 100px" }
             You have not purchased any tickets for this conference yet.
-            = link_to "Book your tickets now!",  "#tickets"
+            = link_to "Book your tickets now!", "#tickets", class: 'btn btn-info btn-lg'
       .row
-        .col-md-6.col-md-offset-3{ id: (conference.picture? ? "header-image" : "header-no-image") }
+        - picture_present = splashpage.banner_photo? || conference.picture?
+        .col-md-6.col-md-offset-3{ id: (picture_present ? "header-image" : "header-no-image") }
           .row
-            -#
-              - if conference.picture?
-                .col-md-4
-                  = image_tag(conference.picture_url,
-                    class: 'img-responsive img-center',
-                    id: 'splash-logo')
+            - if conference.picture? && !splashpage.banner_photo?
+              .col-md-4
+                = image_tag(conference.picture_url,
+                  class: 'img-responsive img-center',
+                  id: 'splash-logo')
             .col-md-8
               %h1
                 = conference.title.html_safe
