--- a/app/views/layouts/_mailbot_header.html.erb
+++ b/app/views/layouts/_mailbot_header.html.erb
@@ -19,12 +19,12 @@
     <% end %>
       <div class="row">
         <div class="col-md-2">
-          <% if false && @conference.present? %>
-            <%= image_tag(conference_logo_url(@conference), style: "display:block;height:70px;width:auto;", alt: "#{@conference.title} logo") %>
+          <% if defined?(@conference) %>
+            <%- image_url = conference_logo_url(@conference) %>
           <% else %>
-            <%- image_url = Organization.first&.picture_url || 'assets/images/snapcon_logo.png' %>
-            <%= image_tag(image_url, style: "display:block;height:70px;width:auto;", alt: "#{ENV['OSEM_NAME']} logo") %>
+            <%- image_url = 'assets/images/snapcon_logo.png' %>
           <% end %>
+          <%= image_tag(image_url, style: "display:block;height:70px;width:auto;", alt: "#{ENV['OSEM_NAME']} logo") %>
         </div>
       </div>
     </div>
