--- a/app/views/admin/events/_datatable_row.haml
+++ b/app/views/admin/events/_datatable_row.haml
@@ -53,16 +53,19 @@
     %td.text-center{ data: { order: event.is_highlight.to_s } }
       = event_switch_checkbox(event, :is_highlight, conference_id)
 
-    %td
-      = event_type_dropdown(event, event_types, conference_id)
+    - if @program.event_types.any?
+      %td{ data: { search: event.event_type.try(:title) || 'Type' } }
+        = event_type_dropdown(event, event_types, conference_id)
 
-    %td
-      = track_dropdown(event, tracks, conference_id)
+    - if @program.tracks.any?
+      %td{ data: { search: event.track.try(:name) || 'Track' } }
+        = track_dropdown(event, tracks, conference_id)
 
-    %td
-      = difficulty_dropdown(event, difficulty_levels, conference_id)
+    - if @program.difficulty_levels.any?
+      %td{ data: { search: event.difficulty_level.try(:title) || 'Difficulty Level' } }
+        = difficulty_dropdown(event, difficulty_levels, conference_id)
 
-    %td
+    %td{ data: { search: event.state.humanize } }
       = state_dropdown(event, conference_id, email_settings)
 
     %td.text-center
