attempt to resolve more cache issues

--- a/app/views/admin/events/_proposal.html.haml
+++ b/app/views/admin/events/_proposal.html.haml
@@ -1,4 +1,5 @@
-- cache ['admin/event', @conference, @program, @event] do
+-# Must cache with current_user due to voiting.
+- cache ['admin/event', @conference, @program, @event, current_user] do
   .row
     .col-md-12
       %h3
