--- a/app/views/layouts/_admin_sidebar_index.html.haml
+++ b/app/views/layouts/_admin_sidebar_index.html.haml
@@ -1,44 +1,45 @@
-%ul.nav.nav-stacked.nav-pills.mySidebar.collapse.navbar-collapse#side-nav
-  .btn-group
-    %button{type: 'button', class: 'btn btn-default btn-link dropdown-toggle', 'data-toggle'=>'dropdown'}
-      %span.fa.fa-home
-      All Conferences
-      %span.caret
-    %ul.dropdown-menu{role: 'menu'}
-      %li
-        = link_to(admin_conferences_path) do
-          %span.fa.fa-home
-          All Conferences
-      - @conferences.each do |conference|
-        - if can? :show, conference
-          %li
-            = link_to(admin_conference_path(conference.short_title)) do
-              %span.fa.fa-cog
-              Manage
-              = conference.short_title
-      - if can? :new, Conference.new
+- cache ['admin', @conference] do
+  %ul.nav.nav-stacked.nav-pills.mySidebar.collapse.navbar-collapse#side-nav
+    .btn-group
+      %button{type: 'button', class: 'btn btn-default btn-link dropdown-toggle', 'data-toggle'=>'dropdown'}
+        %span.fa.fa-home
+        All Conferences
+        %span.caret
+      %ul.dropdown-menu{role: 'menu'}
         %li
-          = link_to(new_admin_conference_path) do
-            %span.fa.fa-plus
-            New Conference
-  - if can? :index, User
-    %hr
-    %li
-      = link_to(admin_users_path) do
-        %span.fa.fa-user
-        Users
-  - if can? :index, Organization
-    %li
-      = link_to(admin_organizations_path) do
-        %span.fa.fa-users
-        Organizations
-  - if can? :index, PaperTrail::Version
-    %li
-      = link_to(admin_revision_history_path) do
-        %span.fa.fa-history
-        Revision History
-    - if ENV['ORGANIZATIONS_ENABLED'] == 'true'
+          = link_to(admin_conferences_path) do
+            %span.fa.fa-home
+            All Conferences
+        - @conferences.each do |conference|
+          - if can? :show, conference
+            %li
+              = link_to(admin_conference_path(conference.short_title)) do
+                %span.fa.fa-cog
+                Manage
+                = conference.short_title
+        - if can? :new, Conference.new
+          %li
+            = link_to(new_admin_conference_path) do
+              %span.fa.fa-plus
+              New Conference
+    - if can? :index, User
+      %hr
+      %li
+        = link_to(admin_users_path) do
+          %span.fa.fa-user
+          Users
+    - if can? :index, Organization
       %li
         = link_to(admin_organizations_path) do
-          %span.fa.fa-group
+          %span.fa.fa-users
           Organizations
+    - if can? :index, PaperTrail::Version
+      %li
+        = link_to(admin_revision_history_path) do
+          %span.fa.fa-history
+          Revision History
+      - if ENV['ORGANIZATIONS_ENABLED'] == 'true'
+        %li
+          = link_to(admin_organizations_path) do
+            %span.fa.fa-group
+            Organizations
