--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,7 +23,7 @@
     = yield(:head)
     - if @conference && @conference.custom_css
       %style{type: 'text/css'}
-        = @conference.custom_css
+        = @conference.custom_css.html_safe
 
   %body{ class: ("conference-#{@conference.short_title}" if @conference) }
     = render 'layouts/navigation', conference: @conference
