--- a/app/views/conferences/_program.haml
+++ b/app/views/conferences/_program.haml
@@ -12,7 +12,7 @@
           %p.lead.text-center
             %span.notranslate
               = conference.title.html_safe
-            will have an enaging program!
+            will have an engaging program!
 
       - unless highlights.blank?
         = render 'highlights', conference_id: conference.short_title,
