--- a/app/views/schedules/_event.html.haml
+++ b/app/views/schedules/_event.html.haml
@@ -7,15 +7,7 @@
       = replacement_event_notice(event_schedule)
 
     %div{ style: 'display: flex; flex-direction: row;' }
-      - if current_user
-        %spna{ style: 'padding: 8px;' }
-          = link_to('#', onClick: 'starClicked();',
-                    'aria-label': "#{event.favourite_users.exists?(current_user.id) ? 'un' : ''}favorite event #{event.title}") do
-            %i.fa.fa-2x{ style: "color: #{contrast_color(header_color)}", |
-                class: event.favourite_users.exists?(current_user.id) ? 'fa-star' : 'fa-star-o', |
-                "aria-hidden" => "true", |
-                "data-url" => toggle_favorite_conference_program_proposal_path(@conference.short_title, event.id), |
-                "data-user" => current_user.id }
+      = render 'proposals/toggle_favorite_event', event: event, header_color: header_color
 
       %h3{ style: 'margin: 3px; flex: 1' }
         = event.title
