--- a/app/assets/javascripts/fullcalendar.js.erb
+++ b/app/assets/javascripts/fullcalendar.js.erb
@@ -21,7 +21,7 @@ $( document ).ready(function() {
       initialDate: fullcalData.data('day'),
       initialView: 'resourceTimeGridDay',
       resources: fullcalData.data('rooms'),
-      resourceOrder: 'order',
+      resourceOrder: 'order, title',
       events: fullcalData.data('events')
     });
 
