--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -26,7 +26,8 @@
           %li
             = link_to 'Forum', 'https://forum.snap.berkeley.edu', target: '_blank'
           %li
-            = link_to 'Learning Festival', 'ylf2021'
+            = link_to 'Learning Festival', '/conferences/ylf2021'
+
       -if user_signed_in?
         .btn-group.pull-right
           %ul.nav.navbar-nav.navbar-right
