--- a/app/assets/javascripts/fullcalendar.js.erb
+++ b/app/assets/javascripts/fullcalendar.js.erb
@@ -1,28 +1,37 @@
 $( document ).ready(function() {
     let calendarEl = document.getElementById('vert-schedule-full-calendar');
     if (!calendarEl) return; //check that we need a vertical schedule
-    let fullcalData = $('#fullcalendar');
+    let $fullCalendar = $('#fullcalendar');
 
     let license_key = "<%= Rails.configuration.fullcalendar[:license_key] %>";
+
+    // Program Hours * Minutes / Interval * Min Row Height for an event.
+    let contentHeight = 6 * 60 / 5 * 18; // TODO: Dynamically set this!
 
     var calendar = new FullCalendar.Calendar(calendarEl, {
       schedulerLicenseKey: license_key,
       nowIndicator: true,
-      now: fullcalData.data('now'),
+      now: $fullCalendar.data('now'),
+      contentHeight: contentHeight,
       expandRows: true,
       allDaySlot: false,
-      slotMinTime: fullcalData.data('startHour') + ':00:00',
-      slotMaxTime: fullcalData.data('endHour') + ':00:00',
+      slotMinTime: $fullCalendar.data('startHour') + ':00:00',
+      slotMaxTime: $fullCalendar.data('endHour') + ':00:00',
+      // TODO: Set these dynamically.
+      slotDuration: '00:15:00',
+      slotLabelInterval: '00:15:00',
       validRange: {
-        start: fullcalData.data('startDate'),
-        end: fullcalData.data('endDate')
+        start: $fullCalendar.data('startDate'),
+        end: $fullCalendar.data('endDate')
       },
-      timeZone: fullcalData.data('timezone'),
-      initialDate: fullcalData.data('day'),
+      timeZone: $fullCalendar.data('timezone'),
+      initialDate: $fullCalendar.data('day'),
       initialView: 'resourceTimeGridDay',
-      resources: fullcalData.data('rooms'),
+      resources: $fullCalendar.data('rooms'),
       resourceOrder: 'order, title',
-      events: fullcalData.data('events')
+      events: $fullCalendar.data('events'),
+      displayEventEnd: false,
+      displayEventTime: false,
     });
 
     calendar.render();
