--- a/app/views/conferences/_tickets.haml
+++ b/app/views/conferences/_tickets.haml
@@ -8,10 +8,10 @@
       .row
         .col-md-12.text-center.col-top
           %h2
-            = "Sign up for #{conference.title}!"
+            Sign up for #{conference.title}!
       .row.text-center
         %h3
-          = link_to('Looking for the SAP Young Thinkers Learning Festival?', conference_path('ylf2021')) if @conference.short_title == '2021'
+          = link_to('Looking for the SAP Young Thinkers Learning Festival?', conference_path('ylf2021')) if conference.short_title == '2021'
       .row.row-centered
         - tickets.each do |ticket|
           .col-lg-4.col-md-3.col-sm-3.col-centered.col-top
