--- a/app/views/conferences/_header.haml
+++ b/app/views/conferences/_header.haml
@@ -1,11 +1,6 @@
-- cache [conference, venue, current_user, '#splash#header'] do
+- cache [conference, venue, '#splash#header'] do
   #banner{ style: ("background-image: url(#{splashpage.banner_photo_url})" if splashpage.banner_photo_url) }
     .container
-      - if user_signed_in? && @conference.tickets.any?
-        - if current_user.ticket_purchases.by_conference(@conference).empty?
-          .alert.bg-info{ role: "alert", style: "margin-bottom: 100px" }
-            You have not purchased any tickets for this conference yet.
-            = link_to "Book your tickets now!", "#tickets", class: 'btn btn-info btn-lg'
       .row
         - picture_present = splashpage.banner_photo? || conference.picture?
         .col-md-6.col-md-offset-3{ id: (picture_present ? "header-image" : "header-no-image") }
