Add a condensed list view, only mildly useful without times

--- a/app/assets/javascripts/fullcalendar.js.erb
+++ b/app/assets/javascripts/fullcalendar.js.erb
@@ -40,7 +40,7 @@ $( document ).ready(function() {
       headerToolbar: {
         left: 'prev,next',
         center: 'title',
-        right: 'resourceTimeGridDay,resourceTimeGridFourDay'
+        right: 'resourceTimeGridDay,resourceTimeGridFourDay,listDay'
       },
       // TODO: Make this conference Specific?
       views: {
