Support favourite filtering on fullcalendar

--- a/app/assets/javascripts/fullcalendar.js.erb
+++ b/app/assets/javascripts/fullcalendar.js.erb
@@ -30,7 +30,7 @@ $( document ).ready(function() {
       resources: $fullCalendar.data('rooms'),
       resourceOrder: 'order, title',
       events: $fullCalendar.data('events'),
-      displayEventEnd: false,
+      displayEventEnd: false, // TODO change in list view.
       displayEventTime: false,
       titleFormat: { // will produce something like "Tuesday, September 18, 2018"
         month: 'long',
