--- a/app/views/schedules/events.html.haml
+++ b/app/views/schedules/events.html.haml
@@ -4,17 +4,10 @@
 
   %h1.text-center
     - if @favourites
-      Your Personal Program for
+      #{current_user.name}'s Program for #{@conference.title}
     - else
-      Program for
-    = @conference.title
-  - if current_user
-    .row
-      .col-md-12.text-center
-        = button_to (@favourites ? 'All events' : 'My Personal Schedule'),
-                    events_conference_schedule_path(@conference.short_title),
-                    params: { favourites: !@favourites },
-                    method: :get, class: 'btn btn-success'
+      Program for #{@conference.title}
+
   .dropdown.program-dropdown
     %button{ type: "button", class: "btn btn-default dropdown-toggle", 'data-toggle' => "dropdown" }
       Dates
