--- a/app/views/proposals/show.html.haml
+++ b/app/views/proposals/show.html.haml
@@ -147,7 +147,7 @@
             = render partial: 'surveys/list', locals: { surveys: @surveys_after_event, conference: @conference }
 
     / TODO-SNAPCON: Should this just use the happening now splash flag?
-    - if !@conference.pending? && !conference.ended?
+    - if !@conference.pending? && !@conference.ended?
       .col-md-3
         #happening-now
           = render 'conferences/happening_now', conference: @conference,
