--- a/app/views/conferences/_about_and_happening_now.haml
+++ b/app/views/conferences/_about_and_happening_now.haml
@@ -13,7 +13,9 @@
 %section#about-and-happening-now
   .container
     .row
-      = yield :additional_messages
+      .col-md-12
+        = yield :additional_messages
+    .row
       -# happening now events are displayed second in md or lg view
       - if conference.splashpage.include_happening_now? && conference.splashpage.include_program?
         - if conference.description.present?
