--- a/app/views/conferences/show.html.haml
+++ b/app/views/conferences/show.html.haml
@@ -16,35 +16,26 @@
   = @conference.title
 
 = content_for :additional_messages do
-  - if user_signed_in? && @conference.tickets.any?
-    - if current_user.ticket_purchases.by_conference(@conference).empty?
-      .row
-        .col-md-12
-          .alert.alert-dismissable.alert-info.text-center#no-tickets{ role: 'alert' }
-            %button.button.close{ "data-dismiss" => "alert", "aria-label"=>"close" }
-              &times;
-            You have not purchased any tickets for this conference yet.
-            = link_to "Book your tickets now!", "#tickets", class: 'btn btn-info btn-lg'
+  - if user_signed_in? && @conference.tickets.any? && current_user.ticket_purchases.by_conference(@conference).empty?
+    .alert.alert-dismissable.alert-info.text-center#no-tickets{ role: 'alert' }
+      %button.button.close{ "data-dismiss" => "alert", "aria-label"=>"close" }
+        &times;
+      You have not purchased any tickets for this conference yet.
+      = link_to "Book your tickets now!", "#tickets", class: 'btn btn-info btn-lg'
 
   - if @unpaid_tickets
-    .row
-      .col-md-12
-        .alert.alert-dismissable.alert-info.text-center#unpaid-tickets{ role: 'alert' }
-          %button.button.close{ "data-dismiss" => "alert", "aria-label"=>"close" }
-            &times;
-          %p
-            You have unpaid tickets. Please complete your purchase.
-            = link_to('Purchase Tickets', new_conference_payment_path(@conference), class: 'btn btn-success btn-lg')
+    .alert.alert-dismissable.alert-info.text-center#unpaid-tickets{ role: 'alert' }
+      %button.button.close{ "data-dismiss" => "alert", "aria-label"=>"close" }
+        &times;
+      You have unpaid tickets. Please complete your purchase.
+      = link_to('Purchase Tickets', new_conference_payment_path(@conference), class: 'btn btn-success btn-lg')
 
   - if @user_needs_to_register
-    .row
-      .col-md-12
-        .alert.alert-dismissable.alert-warning.text-center#no-reg{ role: 'alert' }
-          %button.button.close{ "data-dismiss" => "alert", 'aria-label': 'close' }
-            &times;
-          %p
-            You still need to complete your registration for #{@conference.title}.
-            = link_to('Complete Registration', new_conference_conference_registration_path(@conference), class: 'btn btn-success btn-lg')
+    .alert.alert-dismissable.alert-warning.text-center#no-reg{ role: 'alert' }
+      %button.button.close{ "data-dismiss" => "alert", 'aria-label': 'close' }
+        &times;
+      You still need to complete your registration for #{@conference.title}.
+      = link_to('Complete Registration', new_conference_conference_registration_path(@conference), class: 'btn btn-success btn-lg')
 
 #splash
   - cache [@conference, @splashpage, @conference.program, current_user, '#splash#main'] do
@@ -96,7 +87,6 @@
         sponsors: @sponsors
 
     -# footer
-    - if @conference.splashpage.include_social_media?
-      - if @conference.contact.has_social_media?
-        = render 'social_media', contact: @conference.contact
+    - if @conference.splashpage.include_social_media? && @conference.contact.has_social_media?
+      = render 'social_media', contact: @conference.contact
     = render 'footer'
