--- a/app/views/conferences/show.html.haml
+++ b/app/views/conferences/show.html.haml
@@ -38,55 +38,55 @@
       = link_to('Complete Registration', new_conference_conference_registration_path(@conference), class: 'btn btn-success btn-lg')
 
 #splash
-  - cache [@conference, @splashpage, @conference.program, current_user, '#splash#main'] do
-    - if @conference.code_of_conduct.present?
-      = render 'code_of_conduct', organization: @conference.organization
+  -# - cache [@conference, @splashpage, @conference.program, current_user, '#splash#main'] do
+  - if @conference.code_of_conduct.present?
+    = render 'code_of_conduct', organization: @conference.organization
 
-    -# header
-    = render 'header', conference: @conference, venue: @conference.venue, splashpage: @splashpage
+  -# header
+  = render 'header', conference: @conference, venue: @conference.venue, splashpage: @splashpage, cached: true
 
-    -# description / happening now
-    - if @conference.splashpage.include_happening_now? || @conference.description.present?
-      = render 'about_and_happening_now', conference: @conference,
-        events_schedules: @events_schedules, pagy: @pagy,
-        events_schedules_length: @events_schedules_length,
-        events_schedules_limit: @events_schedules_limit,
-        is_happening_next: @is_happening_next
+  -# description / happening now
+  - if @conference.splashpage.include_happening_now? || @conference.description.present?
+    = render 'about_and_happening_now', conference: @conference,
+      events_schedules: @events_schedules, pagy: @pagy,
+      events_schedules_length: @events_schedules_length,
+      events_schedules_limit: @events_schedules_limit,
+      is_happening_next: @is_happening_next
 
-    -# calls for content, or program
-    - if @conference.splashpage.include_cfp?
-      = render 'call_for_content', conference: @conference,
-        call_for_events: @call_for_events, call_for_tracks: @call_for_tracks,
-        call_for_booths: @call_for_booths,
-        event_types: @event_types, tracks: @track_names
+  -# calls for content, or program
+  - if @conference.splashpage.include_cfp?
+    = render 'call_for_content', conference: @conference,
+      call_for_events: @call_for_events, call_for_tracks: @call_for_tracks,
+      call_for_booths: @call_for_booths,
+      event_types: @event_types, tracks: @track_names
 
-    - if @conference.splashpage.include_program?
-      = render 'program', conference: @conference, tracks: @tracks,
-        highlights: @highlights, booths: @booths
+  - if @conference.splashpage.include_program?
+    = render 'program', conference: @conference, tracks: @tracks,
+      highlights: @highlights, booths: @booths, cached: true
 
-    -# attendance/registration
-    - if @conference.splashpage.include_registrations?
-      - if @conference.registration_open?
-        = render 'registration', conference: @conference,
-          registration_period: @conference.registration_period,
-          tickets: @tickets, conference_id: @conference.short_title
-    - if @conference.splashpage.include_tickets && @conference.tickets.any?
-      = render 'tickets', conference: @conference, tickets: @tickets
+  -# attendance/registration
+  - if @conference.splashpage.include_registrations?
+    - if @conference.registration_open?
+      = render 'registration', conference: @conference,
+        registration_period: @conference.registration_period,
+        tickets: @tickets, conference_id: @conference.short_title
+  - if @conference.splashpage.include_tickets && @conference.tickets.any?
+    = render 'tickets', conference: @conference, tickets: @tickets, cached: true
 
-    -# geo
-    - if @conference.splashpage.include_venue? && @conference.venue
-      = render 'venue', conference: @conference, venue: @conference.venue,
-        commercial: @conference.venue.commercial
-    - if @conference.splashpage.include_lodgings && @conference.lodgings.any?
-      = render 'lodging', venue: @conference.venue, lodgings: @lodgings
+  -# geo
+  - if @conference.splashpage.include_venue? && @conference.venue
+    = render 'venue', conference: @conference, venue: @conference.venue,
+      commercial: @conference.venue.commercial
+  - if @conference.splashpage.include_lodgings && @conference.lodgings.any?
+    = render 'lodging', venue: @conference.venue, lodgings: @lodgings
 
-    -# sponsorship
-    - if @conference.splashpage.include_sponsors?
-      = render 'sponsors', conference: @conference,
-        sponsorship_levels: @sponsorship_levels,
-        sponsors: @sponsors
+  -# sponsorship
+  - if @conference.splashpage.include_sponsors?
+    = render 'sponsors', conference: @conference,
+      sponsorship_levels: @sponsorship_levels,
+      sponsors: @sponsors
 
-    -# footer
-    - if @conference.splashpage.include_social_media? && @conference.contact.has_social_media?
-      = render 'social_media', contact: @conference.contact
-    = render 'footer'
+  -# footer
+  - if @conference.splashpage.include_social_media? && @conference.contact.has_social_media?
+    = render 'social_media', contact: @conference.contact, cached: true
+  = render 'footer', cached: true
