Some quick schedule enhancements.
* fix caching with the program data (hopefully)
* not the conference timezone
* improve clicking links to inyourtimezone
* fix a couple page titles

--- a/app/views/conferences/show.html.haml
+++ b/app/views/conferences/show.html.haml
@@ -12,8 +12,8 @@
   - else
     %meta{ property: "twitter:card", content: "summary" }
 
-= content_for :title do
-  = @conference.title
+- content_for :title do
+  = "#{@event.title} #{@conference.title}"
 
 = content_for :additional_messages do
   - if user_signed_in? && @conference.tickets.any? && current_user.ticket_purchases.by_conference(@conference).empty?
