--- a/app/views/schedules/vertical_schedule.haml
+++ b/app/views/schedules/vertical_schedule.haml
@@ -7,6 +7,9 @@
     - else
       Schedule for #{@conference.title}
 
+  %p.text-center
+    All Events are currently scheduled in #{@conference.timezone}.
+
   #vert-schedule-full-calendar
   #fullcalendar{ data: { rooms: @rooms, events: @event_schedules, day: @day,
   'start-hour': @conference.start_hour, 'end-hour': @conference.end_hour,
