--- a/app/views/schedules/_event.html.haml
+++ b/app/views/schedules/_event.html.haml
@@ -3,61 +3,64 @@
   color_style = "color: #{contrast_color(header_color)}"
   condensed_view = defined?(is_brief) && is_brief
   abstract_length = condensed_view ? 300 : 400
+  cache_key = [event, event_schedule, condensed_view, current_user, '#eventPanel']
 
-.panel.panel-default.event-panel{ onClick: 'eventClicked(event, this);', 'data-url': conference_program_proposal_url(@conference.short_title, event.id), tabindex: -1 }
-  .trapezoid{ style: 'color: white; top: 12px; z-index: 100;' }
-  .panel-heading{ style: "background-color: #{header_color}; #{color_style}; border-radius: 4px" }
-    %p
-      = canceled_replacement_event_label(event, event_schedule)
-      = replacement_event_notice(event_schedule)
+- cache cache_key do
+  .panel.panel-default
+    .trapezoid{ style: 'color: white; top: 12px; z-index: 100;' }
+    .panel-heading{ style: "background-color: #{header_color}; #{color_style}; border-radius: 4px" }
+      %p
+        = canceled_replacement_event_label(event, event_schedule)
+        = replacement_event_notice(event_schedule)
 
-    %div{ style: 'display: flex; flex-direction: row;' }
-      = render 'proposals/toggle_favorite_event',
-              event: event, header_color: header_color, conference: @conference
+      %div{ style: 'display: flex; flex-direction: row;' }
+        = render 'proposals/toggle_favorite_event',
+                event: event, header_color: header_color, conference: @conference
 
-      %h3{ style: 'margin: auto 3px; flex: 1' }
-        = link_to conference_program_proposal_path(@conference.short_title, event.id),
-                  style: color_style do
-          = event.title
-          - if event.subtitle.present?
+        %h3{ style: 'margin: auto 3px; flex: 1' }
+          = link_to conference_program_proposal_path(@conference.short_title, event.id),
+                    style: color_style do
+            = event.title
+            - if event.subtitle.present?
+              %br
+              %small{ style: color_style }
+                = event.subtitle
+
+        - if !condensed_view
+          %span
+            - event.speakers_ordered.each do |speaker|
+              = image_tag speaker.profile_picture, class: 'img-circle', alt: speaker.name
+
+    .trapezoid{ style: "color: #{header_color}; border-top-color: #{header_color}; top: 12px;" }
+
+    .panel-body
+      %div{ onClick: 'eventClicked(event, this);', 'data-url': conference_program_proposal_url(@conference.short_title, event.id) }
+        - if (event.speakers.any?)
+          %h4
+            = event.speaker_names
+        %span.h5
+          = join_event_link(event, current_user)
+        %p
+          = truncate(markdown(event.abstract), length: abstract_length, escape: false) do
             %br
-            %small{ style: color_style }
-              = event.subtitle
+            = link_to 'more', conference_program_proposal_path(@conference.short_title, event.id)
+          -# TODO: More informative text or aria-label.
 
       - if !condensed_view
-        %span
-          - event.speakers_ordered.each do |speaker|
-            = image_tag speaker.profile_picture, class: 'img-circle', alt: speaker.name
-
-  .trapezoid{ style: "color: #{header_color}; border-top-color: #{header_color}; top: 12px;" }
-
-  .panel-body
-    %h4
-      - if (event.speakers.any?)
-        = event.speaker_names
-    %span.h5
-      = join_event_link(event, current_user)
-    %p
-      = truncate(markdown(event.abstract), length: abstract_length, escape: false) do
-        %br
-        = link_to 'more', conference_program_proposal_path(@conference.short_title, event.id)
-      -# TODO: More informative text or aria-label.
-
-    - if !condensed_view
-      - if event_schedule.present?
-        = inyourtz(event_schedule.start_time) do
-          %span.track
-            %span.fa.fa-clock-o
-            %span.label{ style: 'background-color: grey' }
-              = event_schedule.start_time.strftime('%l:%M %P')
-              \-
-              = event_schedule.end_time.strftime('%l:%M %P')
-        %span.track
-          %span.fa.fa-map-marker
-          %span.label{ style: 'background-color: grey' }
-            = event_schedule.room.name
-      - if event.track
-        %span.track
-          %span.fa.fa-road
-          %span.label{ style: "background-color: #{event.track.color}; color: #{ contrast_color(event.track.color) }" }
-            = event.track.name
+        - if event_schedule.present?
+          = inyourtz(event_schedule.start_time) do
+            .track
+              %span.fa.fa-clock-o
+              .label{ style: 'background-color: grey' }
+                = event_schedule.start_time.strftime('%l:%M %P')
+                \-
+                = event_schedule.end_time.strftime('%l:%M %P')
+          .track
+            %span.fa.fa-map-marker
+            .label{ style: 'background-color: grey' }
+              = event_schedule.room.name
+        - if event.track
+          .track
+            %span.fa.fa-road
+            .label{ style: "background-color: #{event.track.color}; color: #{ contrast_color(event.track.color) }" }
+              = event.track.name
