--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
     %meta{charset: 'utf-8'}
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1'}
     %title
-      = yield(:title) || ENV['OSEM_NAME'] || 'OSEM'
+      = content_for(:title) || ENV['OSEM_NAME'] || 'OSEM'
     %meta{content: 'Snap!Con -- A conference all about Snap!, a programing language from UC Berkeley.', name: 'description'}
     %meta{content: 'Michael Ball, Brian Harvey, Jens Moenig, Bernat Romagosa, Dan Garcia, Lauren Mock', name: 'author'}
     = stylesheet_link_tag "application", media: 'all'
